<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="vertical" />

    <ImageView
        android:id="@+id/no_network_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/no_internet_image"
        android:src="@drawable/no_network_image"
        android:visibility="gone" />

    <TextView
        android:id="@+id/no_network_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_network_image"
        android:layout_margin="4dp"
        android:gravity="center"
        android:text="@string/no_internet_warning"
        android:textColor="@color/colorAccent"
        android:visibility="gone" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/no_network_tv"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_margin="4dp"
        android:background="@color/colorAccent"
        android:onClick="isNetAvailable"
        android:text="@string/retry"
        android:textColor="#fefefe"
        android:visibility="gone" />
</RelativeLayout>